[package]
name = "pi_crypto"
version = "0.1.0"
authors = ["yineng <dev@dev.com>"]
edition = "2018"

[dependencies]
libc = "*"
rust-crypto = { git = "http://ser.yinengyun.com:10082/tech/rust-crypto.git"}
siphasher = "0.3"
pi_hash_value = "0.1"
ring = "0.16"
libsecp256k1 = "0.6"
untrusted = "0.7"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
simple_asn1 = "0.4"

[features]
bls = []

[dev-dependencies]
hex = "0.3.2"
base64 = "0.12.0"