[package]
name = "pi_crypto"
version = "0.1.0"
authors = ["yineng <dev@dev.com>"]
edition = "2018"
description = "pi_crypto"
repository = "https://github.com/GaiaWorld/pi_crypto.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "crypto"]

[dependencies]
libc = "0.2.146"
rust-crypto = "0.2"
siphasher = "0.3"
pi_hash_value = "0.1"
ring = "0.16"
libsecp256k1 = "0.6"
untrusted = "0.7"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
simple_asn1 = "0.4"
rsa = "0.6.1"

[features]
bls = []

[dev-dependencies]
hex = "0.3.2"
base64 = "0.12.0"